--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "o107_finalproject",
   "version": "1.0.0",
   "description": "shopping website for o107",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
