--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "https://github.com/yelir4/o107_finalproject.git"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "sqlite3": "^5.1.7"
   }
 }
