--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "better-sqlite3": "^11.6.0",
     "express": "^4.21.1",
-    "express-session": "^1.18.1",
-    "sqlite3": "^5.1.7"
+    "express-session": "^1.18.1"
   }
 }
